; ModuleID = '/home/carl/AnghaBench/sqlcipher/tool/extr_lemon.c_statehash.c'
source_filename = "/home/carl/AnghaBench/sqlcipher/tool/extr_lemon.c_statehash.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.config = type { i32, %struct.config*, %struct.TYPE_2__* }
%struct.TYPE_2__ = type { i32 }

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @statehash(%struct.config* %0) #0 {
  %2 = alloca %struct.config*, align 8
  %3 = alloca i32, align 4
  store %struct.config* %0, %struct.config** %2, align 8
  store i32 0, i32* %3, align 4
  br label %4

4:                                                ; preds = %7, %1
  %5 = load %struct.config*, %struct.config** %2, align 8
  %6 = icmp ne %struct.config* %5, null
  br i1 %6, label %7, label %24

7:                                                ; preds = %4
  %8 = load i32, i32* %3, align 4
  %9 = mul i32 %8, 571
  %10 = load %struct.config*, %struct.config** %2, align 8
  %11 = getelementptr inbounds %struct.config, %struct.config* %10, i32 0, i32 2
  %12 = load %struct.TYPE_2__*, %struct.TYPE_2__** %11, align 8
  %13 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %12, i32 0, i32 0
  %14 = load i32, i32* %13, align 4
  %15 = mul nsw i32 %14, 37
  %16 = add i32 %9, %15
  %17 = load %struct.config*, %struct.config** %2, align 8
  %18 = getelementptr inbounds %struct.config, %struct.config* %17, i32 0, i32 0
  %19 = load i32, i32* %18, align 8
  %20 = add i32 %16, %19
  store i32 %20, i32* %3, align 4
  %21 = load %struct.config*, %struct.config** %2, align 8
  %22 = getelementptr inbounds %struct.config, %struct.config* %21, i32 0, i32 1
  %23 = load %struct.config*, %struct.config** %22, align 8
  store %struct.config* %23, %struct.config** %2, align 8
  br label %4

24:                                               ; preds = %4
  %25 = load i32, i32* %3, align 4
  ret i32 %25
}


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
